--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=my-test-app
 # MySQL DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/test_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ec_db?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=adminuser
 spring.datasource.password=pass_word_00
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
