--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
