feat: カート最終更新日時機能の追加とStackOverflowErrorの修正
- Fix: カート操作時のjava.lang.StackOverflowErrorを解消。
  - CartおよびCartItemエンティティに@JsonManagedReference/@JsonBackReferenceを適用し、JSONシリアライズ時の循環参照を防止。
  - Lombokの@EqualsAndHashCode(of = "id")をCartおよびCartItemに最適化し、ハッシュコード/equalsメソッド内での潜在的な再帰を回避。
- Feat: Cartエンティティに最終更新日時機能を追加。
  - 'carts'テーブルに'last_modified_date'カラムを追加。
  - @UpdateTimestampアノテーションを使用して、lastModifiedDateの自動タイムスタンプ機能を設定。
- Refactor: Cartエンティティにカートアイテムの追加/削除用ユーティリティメソッドを追加し、コードを整理。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Server Port (optional)
 server.port=8080
+
+logging.level.com.example.my_test_app=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.file.path=./logs
